--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
-  <body id="home">
+  <body>
 
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -41,25 +41,98 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#gallery">Gallery</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#intro">Inicio</a></li>
+            <li><a href="#gallery">Galería</a></li>
+            <li><a href="#about">Sobre mí</a></li>
+            <li><a href="#contact">Contacto</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <section id="intro" class="text-intro no-padding-bottom">
-      <div class="container">
+      <div class="container intro-container">
         <div class="row">
           <div class="col-md-12 col-lg-12">
             <h1 class="type">
-              <p>Hi! I'm <strong class="text-primary">José Tovar</strong></p>
-              <p>I'm a web & graphic <strong class="text-primary">designer</strong>...</p>
-              <p>And I like <strong class="love">you</strong>.<span class="typing">|</span></p>
+              <p>¡Hola! Soy <strong class="text-primary">José Tovar</strong></p>
+              <p>Creo <strong class="love">páginas web</strong> y diseño <br class="optional"><strong class="text-primary">publicidad</strong>... </p>
+              <p>¡Bienvenido!</p>
+              <p><a href="#gallery" class="btn btn-lg btn-danger">Ver más</a><span class="typing">|</span></p>
             </h1>
           </div>
+        </div>
+      </div>
+    </section>
+    <!-- portfolio-->
+    <section id="gallery" class="no-padding-bottom"> 
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="heading">Galería</h2>
+            <p class="lead margin-bottom--big">¡Te presento algunos de los proyectos que he realizado! </p>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row no-space">
+          <div class="col-sm-4 col-md-3">
+            <div class="box"><a href="img/portfolio/sion-naval.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Página Web" data-footer="Página Web: www.sionnaval.com"><img src="img/portfolio/sion-naval.jpg" alt="sionnaval" class="img-responsive"></a></div>
+          </div>
+          <div class="col-sm-4 col-md-3">
+            <div class="box"><a href="img/portfolio/bussiness-cards.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Tarjetas de presentación" data-footer="Tarjetas de Presentación: ATP Logisticos"><img src="img/portfolio/bussiness-cards.jpg" alt="ATP Logisticos" class="img-responsive"></a></div>
+          </div>
+          <div class="col-sm-4 col-md-3">
+            <div class="box"><a href="img/portfolio/responsive.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Página Web" data-footer="Página Web: www.sinteticamaracana.com"><img src="img/portfolio/responsive.jpg" alt="Página Web: www.sinteticamaracana.com" class="img-responsive"></a></div>
+          </div>
+          <div class="col-sm-4 col-md-3">
+            <div class="box"><a href="img/portfolio/flyer.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Flyer" data-footer="Flyer: Clases de Inglés"><img src="img/portfolio/flyer.jpg" alt="" class="img-responsive"></a></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="about" class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="heading">Sobre mí</h2>
+          </div>
+          <div class="col-sm-12">
+            <div class="row">
+              <div class="col-sm-6 text-left">
+                <p>Mi nombre es <strong>José Daniel Tovar Zurita</strong>. Aprendí a hacer código y páginas web desde los 14 años. Me gusta lo simple y moderno, que sea directo y sencillo... <i>“Las cosas simples son las más extraordinarias y sólo los sabios consiguen verlas”. (Paulo Coelho)</i>. Y eso es lo que te propongo, algo nuevo, sencillo a los ojos y poderoso a la mente.</p>
+                <p><img src="img/about.jpg" alt="This is me" class="image img-circle img-responsive"></p>
+              </div>
+              <div class="col-sm-6">
+                <p>Gracias a la práctica diaria desarrollé habilidades, y entre ellas, las siguientes son las que más fortalecí, por esto te puedo garantizar un trabajo impecable, enfocado a lo <strong>estético</strong> (por los ojos entra el producto online) y con un buen manejo de <strong>mantenimiento continuo</strong> (un sitio constantemente actualizado es más popular).</p>
+                <div class="skill-item">
+                  <div class="progress-title">HTML5</div>
+                  <div class="progress">
+                    <div role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;" class="progress-bar progress-bar-skill3"><span class="sr-only">90</span></div>
+                  </div>
+                </div>
+                <div class="skill-item">
+                  <div class="progress-title">CSS</div>
+                  <div class="progress">
+                    <div role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;" class="progress-bar progress-bar-skill4"><span class="sr-only">90</span></div>
+                  </div>
+                </div>
+                <div class="skill-item">
+                  <div class="progress-title">PHP</div>
+                  <div class="progress">
+                    <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;" class="progress-bar progress-bar-skill1"><span class="sr-only">80</span></div>
+                  </div>
+                </div>
+                <div class="skill-item">
+                  <div class="progress-title">Javascript</div>
+                  <div class="progress">
+                    <div role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;" class="progress-bar progress-bar-skill2"><span class="sr-only">70</span></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 mt-big"></div>
         </div>
       </div>
     </section>
