--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#intro">Inicio</a></li>
-            <li><a href="#gallery">Galería</a></li>
+            <li><a href="#services">Servicios</a></li>
             <li><a href="#about">Sobre mí</a></li>
+            <li><a href="#gallery">Galería</a></li>
             <li><a href="#contact">Contacto</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -58,39 +59,53 @@
               <p>¡Hola! Soy <strong class="text-primary">José Tovar</strong></p>
               <p>Creo <strong class="love">páginas web</strong> y diseño <br class="optional"><strong class="text-primary">publicidad</strong>... </p>
               <p>¡Bienvenido!</p>
-              <p><a href="#gallery" class="btn btn-lg btn-danger">Ver más</a><span class="typing">|</span></p>
+              <p><a href="#services" class="btn btn-lg btn-danger">Ver más</a><span class="typing">|</span></p>
             </h1>
           </div>
         </div>
       </div>
     </section>
-    <!-- portfolio-->
-    <section id="gallery" class="no-padding-bottom"> 
+    <!--   *** Services ***-->
+    <section id="services" class="section">
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
-            <h2 class="heading">Galería</h2>
-            <p class="lead margin-bottom--big">¡Te presento algunos de los proyectos que he realizado! </p>
+          <div class="col-sm-12">
+            <h2 class="heading">Servicios</h2>
           </div>
-        </div>
-      </div>
-      <div class="container-fluid">
-        <div class="row no-space">
-          <div class="col-sm-4 col-md-3">
-            <div class="box"><a href="img/portfolio/sion-naval.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Página Web" data-footer="Página Web: www.sionnaval.com"><img src="img/portfolio/sion-naval.jpg" alt="sionnaval" class="img-responsive"></a></div>
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail text-center">
+              <i class="fa fa-paint-brush text-primary first"></i>
+              <div class="caption">
+                <h3>Sitios Modernos</h3>
+                <p>Te ofrezco un sitio con las tendencias modernas y simples que van a convencer al ojo de tu cliente </p>
+                <p><a href="#contact" class="btn btn-primary" role="button">¡Contacto!</a></p>
+              </div>
+            </div>
           </div>
-          <div class="col-sm-4 col-md-3">
-            <div class="box"><a href="img/portfolio/bussiness-cards.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Tarjetas de presentación" data-footer="Tarjetas de Presentación: ATP Logisticos"><img src="img/portfolio/bussiness-cards.jpg" alt="ATP Logisticos" class="img-responsive"></a></div>
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail text-center">
+              <i class="fa fa-clock-o love second"></i>
+              <div class="caption">
+                <h3>Negocio Actualizado</h3>
+                <p>Con bases de datos, tus datos serán accesibles con facilidad para mantener tu sitio ¡al día! </p>
+                <p><a href="#contact" class="btn btn-primary" role="button">¡Contacto!</a></p>
+              </div>
+            </div>
           </div>
-          <div class="col-sm-4 col-md-3">
-            <div class="box"><a href="img/portfolio/responsive.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Página Web" data-footer="Página Web: www.sinteticamaracana.com"><img src="img/portfolio/responsive.jpg" alt="Página Web: www.sinteticamaracana.com" class="img-responsive"></a></div>
-          </div>
-          <div class="col-sm-4 col-md-3">
-            <div class="box"><a href="img/portfolio/flyer.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Flyer" data-footer="Flyer: Clases de Inglés"><img src="img/portfolio/flyer.jpg" alt="" class="img-responsive"></a></div>
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail text-center text-success">
+              <i class="fa fa-key third"></i>
+              <div class="caption">
+                <h3>Accesible</h3>
+                <p>Diseño Responsivo, acceso cómodo desde todos los dispositivos, te van a dar un gran alcance en el mercado  </p>
+                <p><a href="#contact" class="btn btn-primary" role="button">¡Contacto!</a></p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
+    
     <section id="about" class="section">
       <div class="container">
         <div class="row">
@@ -100,7 +115,7 @@
           <div class="col-sm-12">
             <div class="row">
               <div class="col-sm-6 text-left">
-                <p>Mi nombre es <strong>José Daniel Tovar Zurita</strong>. Aprendí a hacer código y páginas web desde los 14 años. Me gusta lo simple y moderno, que sea directo y sencillo pues <i>Las cosas simples son las más extraordinarias y sólo los sabios consiguen verlas</i>. Y eso es lo que te propongo, algo nuevo, sencillo a los ojos y poderoso a la mente.</p>
+                <p>Mi nombre es <strong>José Daniel Tovar Zurita</strong>. Aprendí a hacer código y páginas web desde los 14 años. Me gusta lo simple y moderno, que sea directo y sencillo pues <i>las cosas simples son las más extraordinarias y sólo los sabios consiguen verlas</i>. Y eso es lo que te propongo, algo nuevo, sencillo a los ojos y poderoso a la mente.</p>
                 <p><img src="img/about.jpg" alt="This is me" class="image img-circle img-responsive"></p>
               </div>
               <div class="col-sm-6">
@@ -137,6 +152,103 @@
       </div>
     </section>
     
+    <section id="gallery" class="no-padding-bottom"> 
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="heading">Galería</h2>
+            <p class="lead margin-bottom--big">¡Te presento algunos de los proyectos que he realizado! </p>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row no-space">
+          <div class="col-sm-4 col-md-3">
+            <div class="box"><a href="img/portfolio/sion-naval.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Página Web" data-footer="Página Web: www.sionnaval.com"><img src="img/portfolio/sion-naval.jpg" alt="sionnaval" class="img-responsive"></a></div>
+          </div>
+          <div class="col-sm-4 col-md-3">
+            <div class="box"><a href="img/portfolio/bussiness-cards.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Tarjetas de presentación" data-footer="Tarjetas de Presentación: ATP Logisticos"><img src="img/portfolio/bussiness-cards.jpg" alt="ATP Logisticos" class="img-responsive"></a></div>
+          </div>
+          <div class="col-sm-4 col-md-3">
+            <div class="box"><a href="img/portfolio/responsive.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Página Web" data-footer="Página Web: www.sinteticamaracana.com"><img src="img/portfolio/responsive.jpg" alt="Página Web: www.sinteticamaracana.com" class="img-responsive"></a></div>
+          </div>
+          <div class="col-sm-4 col-md-3">
+            <div class="box"><a href="img/portfolio/flyer.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Flyer" data-footer="Flyer: Clases de Inglés"><img src="img/portfolio/flyer.jpg" alt="" class="img-responsive"></a></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="container clearfix">
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="heading">Contacto</h2>
+            <div class="row">
+              <div class="col-md-6">
+                <form id="contact-form" method="POST" action="https://formspree.io/josedanieltovarzurita@gmail.com" class="contact-form form">
+                  <div class="controls">
+                    <div class="row">
+                      <div class="col-sm-6">
+                        <div class="form-group">
+                          <label for="name">Tu nombre *</label>
+                          <input type="text" name="name" id="name" placeholder="Nombre" required="required" class="form-control">
+                        </div>
+                      </div>
+                      <div class="col-sm-6">
+                        <div class="form-group">
+                          <label for="surname">Tu apellido *</label>
+                          <input type="text" name="surname" id="surname" placeholder="Apellido" required="required" class="form-control">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="email">E-mail *</label>
+                      <input type="email" name="email" id="email" placeholder="E-mail" required="required" class="form-control">
+                    </div>
+                    <div class="form-group">
+                      <label for="services">¿Qué servicios te interesan? </label>
+                      <select name="services" id="services" class="form-control">
+                        <option value="null">--Elige un Servicio--</option>
+                        <option value="web-design">Diseño Web</option>
+                        <option value="publicidad">Publicidad</option>
+                        <option value="asesoria">Asesoría</option>
+                      </select>
+                    </div>
+                    <div class="form-group">
+                      <label for="message">Escribe un mensaje *</label>
+                      <textarea rows="4" name="message" id="message" required="required" placeholder="Ingresa tu mensaje" class="form-control"></textarea>
+                    </div>
+                    <div class="text-center">
+                      <input type="submit" value="Enviar Mensaje" class="btn btn-primary btn-block">
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <div class="col-md-6">
+                <p>Gracias por visitar mi web personal, fue un placer para mí tenerte aquí y mostrarte todo lo que te puedo ofrecer, en la izquierda hay un formulario que deberías llenar si estás interesado, en el que proporcionarás tus datos, todos son requeridos excepto: "¿qué servicios te interesan?".</p>
+                <p>Espero podamos tener un buen futuro juntos, debajo encontrarás formas alternativas de contactarme, nuevamente gracias por tu visita y <strong>¡feliz día en internet!</strong></p>
+                <p class="social"><a href="https://www.facebook.com/profile.php?id=100013652949687" title="" class="facebook"><i class="fa fa-facebook"></i></a></i></a><a href="https://plus.google.com/u/0/114604335292937767043" title="" class="gplus"><i class="fa fa-google-plus"></i><a href="tel:3012585911" title="" class="email"><i class="fa fa-phone"></i></a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer__copyright">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <p>&copy;2017 José Daniel Tovar Zurita</p>
+            </div>
+            <div class="col-md-6">
+              <p class="credit pull-right">Web Designer, Programmer, Graphic Designer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- Javascript files-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')</script>
