--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="col-sm-12">
             <div class="row">
               <div class="col-sm-6 text-left">
-                <p>Mi nombre es <strong>José Daniel Tovar Zurita</strong>. Aprendí a hacer código y páginas web desde los 14 años. Me gusta lo simple y moderno, que sea directo y sencillo pues <i>las cosas simples son las más extraordinarias y sólo los sabios consiguen verlas</i>. Y eso es lo que te propongo, algo nuevo, sencillo a los ojos y poderoso a la mente.</p>
+                <p>Mi nombre es <strong>José Daniel Tovar Zurita</strong>. Aprendí a hacer código y páginas web desde los 14 años. Me gusta lo simple y moderno, que sea directo y sencillo pues <i>las cosas simples son las más extraordinarias</i>. Y eso es lo que te propongo, algo nuevo, sencillo a los ojos y poderoso a la mente.</p>
                 <p><img src="img/about.jpg" alt="This is me" class="image img-circle img-responsive"></p>
               </div>
               <div class="col-sm-6">
