--- a/index.html
+++ b/index.html
@@ -187,6 +187,8 @@
             <div class="row">
               <div class="col-md-6">
                 <form id="contact-form" method="POST" action="https://formspree.io/josedanieltovarzurita@gmail.com" class="contact-form form">
+                  <input type="text" name="_gotcha" style="display:none" />
+                  <input type="hidden" name="_next" value="https://jdtovar.gq/index.html" />
                   <div class="controls">
                     <div class="row">
                       <div class="col-sm-6">
@@ -215,7 +217,6 @@
                         <option value="asesoria">Asesoría</option>
                       </select>
                     </div>
-                    <input type="text" name="_gotcha" style="display:none" />
                     <div class="form-group">
                       <label for="message">Escribe un mensaje *</label>
                       <textarea rows="4" name="message" id="message" required="required" placeholder="Ingresa tu mensaje" class="form-control"></textarea>
