--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <div class="col-md-6">
                 <form id="contact-form" method="POST" action="https://formspree.io/josedanieltovarzurita@gmail.com" class="contact-form form">
                   <input type="text" name="_gotcha" style="display:none" />
-                  <input type="hidden" name="_next" value="https://jdtovar.gq/index.html" />
+                  <input type="hidden" name="_next" value="http://jdtovar.gq/index.html" />
                   <div class="controls">
                     <div class="row">
                       <div class="col-sm-6">
