--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="row">
               <div class="col-md-6">
                 <form id="contact-form" method="POST" action="https://formspree.io/josedanieltovarzurita@gmail.com" class="contact-form form">
-                  <input type="text" name="_gotcha" style="display:block" />
+                  <input type="text" name="_gotcha" style="display:none" />
                   <input type="hidden" name="_next" value="http://jdtovar.gq/index.html" />
                   <div class="controls">
                     <div class="row">
@@ -221,15 +221,14 @@
                       <label for="message">Escribe un mensaje *</label>
                       <textarea rows="4" name="message" id="message" required="required" placeholder="Ingresa tu mensaje" class="form-control"></textarea>
                     </div>
-                    <input type="text" name="_gotcha" style="display:none" />
                     <div class="text-center">
-                      <input type="submit" value="Enviar Mensaje" class="btn btn-primary btn-block">
+                      <input type="submit" value="Enviar Mensaje" id="sendMessage" class="btn btn-primary btn-block">
                     </div>
                   </div>
                 </form>
               </div>
               <div class="col-md-6">
-                <p>Gracias por visitar mi web personal, fue un placer para mí tenerte aquí y mostrarte todo lo que te puedo ofrecer, en la izquierda hay un formulario que deberías llenar si estás interesado, en el que proporcionarás tus datos, todos son requeridos excepto: "¿qué servicios te interesan?".</p>
+                <p>Gracias por visitar mi web personal, fue un placer para mí tenerte aquí y mostrarte todo lo que te puedo ofrecer, en la izquierda hay un formulario que deberías llenar si estás interesado, en el que proporcionarás tus datos, todos son requeridos excepto: "¿qué servicios te interesan?"; luego de esto das click en <strong>ENVIAR MENSAJE</strong> y aceptas el <i>reCAPTCHA</i>.</p>
                 <p>Espero podamos tener un buen futuro juntos, debajo encontrarás formas alternativas de contactarme, nuevamente gracias por tu visita y <strong>¡feliz día en internet!</strong></p>
                 <p class="social"><a href="https://www.facebook.com/profile.php?id=100013652949687" title="" class="facebook"><i class="fa fa-facebook"></i></a></i></a><a href="https://plus.google.com/u/0/114604335292937767043" title="" class="gplus"><i class="fa fa-google-plus"></i><a href="tel:3012585911" title="" class="email"><i class="fa fa-phone"></i></a></p>
               </div>
