--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
               <div class="col-md-6">
                 <p>Gracias por visitar mi web personal, fue un placer para mí tenerte aquí y mostrarte todo lo que te puedo ofrecer, en la izquierda hay un formulario que deberías llenar si estás interesado, en el que proporcionarás tus datos, todos son requeridos excepto: "¿qué servicios te interesan?".</p>
                 <p>Espero podamos tener un buen futuro juntos, debajo encontrarás formas alternativas de contactarme, nuevamente gracias por tu visita y <strong>¡feliz día en internet!</strong></p>
-                <p class="social"><a href="https://www.facebook.com/profile.php?id=100013652949687" title="" class="facebook"><i class="fa fa-facebook"></i></a></i></a><a href="https://plus.google.com/u/0/114604335292937767043" title="" class="gplus"><i class="fa fa-google-plus"></i><a href="tel:3012585911" title="" class="email"><i class="fa fa-phone"></i></a></p>
+                <p class="social"><a href="https://www.facebook.com/profile.php?id=100013652949687" target="_blank" title="" class="facebook"><i class="fa fa-facebook"></i></a></i></a><a href="https://plus.google.com/u/0/114604335292937767043" target="_blank" title="" class="gplus"><i class="fa fa-google-plus"></i><a href="tel:3012585911" title="" class="email"><i class="fa fa-phone"></i></a></p>
               </div>
             </div>
           </div>
