--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                       <textarea rows="4" name="message" id="message" required="required" placeholder="Ingresa tu mensaje" class="form-control"></textarea>
                     </div>
                     <div class="text-center">
-                      <input type="submit" value="Enviar Mensaje" class="btn btn-primary btn-block">
+                      <input type="submit" value="Enviar Mensaje" id="sendMessage" class="btn btn-primary btn-block">
                     </div>
                   </div>
                 </form>
