--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="row">
               <div class="col-md-6">
                 <form id="contact-form" method="POST" action="https://formspree.io/josedanieltovarzurita@gmail.com" class="contact-form form">
-                  <input type="text" name="_gotcha" style="display:block" />
+                  <input type="text" name="_gotcha" style="display:none" />
                   <input type="hidden" name="_next" value="http://jdtovar.gq/index.html" />
                   <div class="controls">
                     <div class="row">
